--- a/FXExperienceControls/src/main/resources/fxml/FXMLRotatorControl.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLRotatorControl.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import com.fxexperience.javafx.scene.control.paintpicker.DoubleTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -39,11 +40,10 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import com.fxexperience.javafx.scene.control.paintpicker.*?>
 
 <fx:root id="GridPane" hgap="4.0" stylesheets="@../styles/RotatorControl.css" type="javafx.scene.layout.GridPane" vgap="0.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <Label fx:id="rotator_label" text="Label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <Label fx:id="rotator_label" styleClass="rotation-label" text="Label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
     <DoubleTextField fx:id="rotator_textfield" onAction="#rotatorAction" prefColumnCount="4" prefWidth="-1.0" styleClass="LF3-textfield1" text="0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
     <StackPane id="StackPane" GridPane.columnIndex="2" GridPane.rowIndex="0">
       <children>
