--- a/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
@@ -182,7 +182,7 @@
                                     <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="6" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="4">
                                        <children>
                                           <Rectangle fx:id="gradientSquare" arcHeight="20.0" arcWidth="20.0" fill="DODGERBLUE" height="80.0" stroke="TRANSPARENT" strokeType="INSIDE" styleClass="gradient-shape" width="100.0" />
-                                          <Button fx:id="fxButton" contentDisplay="BOTTOM" mnemonicParsing="false" prefHeight="200.0" prefWidth="160.0" styleClass="gradient-object" text="FXExperience">
+                                          <Button fx:id="fxButton" contentDisplay="BOTTOM" mnemonicParsing="false" prefHeight="200.0" prefWidth="160.0" styleClass="gradient-object" text="fx experience">
                                              <graphic>
                                                 <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
