--- a/FXExperienceTools/src/main/resources/styles/spline.css
+++ b/FXExperienceTools/src/main/resources/styles/spline.css
@@ -11,7 +11,7 @@ different terms and without source code for the larger work.
     Author     : andje22
 */
 #SplineEditor {
-    -fx-background-image: url("/images/darkdenim.png");
+    -fx-background-image: url("../images/darkdenim.png");
     -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );
 }
 
@@ -22,7 +22,7 @@ different terms and without source code for the larger work.
 .animation-label {
     -fx-font-family: "Helvetica Neue", "Lucida Grande", "sans-serif";
     -fx-font-weight: bold; 
-    -fx-font-size: 12px;
+    -fx-font-size: 1.25em;
     -fx-text-fill: #C2C2C3;
     -fx-underline: true;
 }
